2009-11-30  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyHBRecHit.cc, ISpyHERecHit.cc, ISpyHORecHit.cc,
	ISpyHFRecHit.cc: Add time information to the collection.

2009-11-27 Tom McCauley <thomas.mccauley@cern.ch>

	* ispy_Collisions09_cfg.py: fix file name

2009-11-25  Ianna Osborne  <ianna.osborne@cern.ch>

	* python/iSpy_Producer_cff.py: Full iSpy sequence. Examples
	updated to use it.

	* ISpyEBRecHit.cc, ISpyEERecHit.cc, ISpyESRecHit.cc: Add time 
	information to the collection.

2009-11-20 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyCSCSegment.cc: quick fix of x,y,z position for splash display

2009-11-19  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyTriggerEvent.h, ISpyTriggerEvent.cc: Move
	(re-)initialization to beginRun as the HLT config may change from
	run to run (at most). 

2009-11-18  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyTriggerEvent.cc: Always create an HLT trigger
	collection. Even an empty one. It is needed to correctly filter
	events on the client side.
	* BuildFile: Link DataFormats/RPCRecHit to avoid problems with
	data dictionary.
	* ispy_BeamSplash_server_cfg.py, ispy_33X_server_cfg.py,
	ispy_33X_proxy_server_cfg.py: More examples on how to use iSpy
	producers. 

2009-11-17  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyService.h, ISpyService.cc: Allow closing of ig files by
	elapsed time.

2009-11-12  Ianna Osborne  <ianna.osborne@cern.ch>

	* python/ispy_33X_cfg.py: Update to use data from a CMSSW_3_3_2
	release.

2009-11-05  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyL1GlobalTriggerReadoutRecord.cc: Add technical trigger
	word.

2009-11-04 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyMuon.cc, ISpyPATMuon.cc: fix cast problem w/charge

2009-10-09 Tom McCauley <thomas.mccauley@cern.ch>

	* VisTriggerEvent.cc: add more information and 
	fix iteration over trigger objects

2009-10-07 Tom McCauley <thomas.mccauley@cern.ch>

	* VisSuperCluster: add rec hit fractions
	* VisCaloCluster: add (to replace VisBasicCluster)